--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "node-sass": "^7.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.39.4",
         "react-icons": "^4.4.0",
         "react-redux": "^8.0.4",
         "react-router-dom": "^6.4.1",
