--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.55.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -78,6 +80,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "0.0.13",
+    "@types/react-slick": "^0.23.10",
     "babel-plugin-named-exports-order": "0.0.2",
     "prop-types": "^15.8.1",
     "webpack": "^5.76.2"
