--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,9 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.1.2",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
