--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.1",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.62.1",
