created admin menu with genre film person activity forms

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-icons": "^4.4.0",
+    "react-modal": "^3.16.1",
     "react-range": "^1.8.14",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
@@ -81,6 +82,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "0.0.13",
+    "@types/react-modal": "^3.16.0",
     "@types/react-slick": "^0.23.10",
     "babel-plugin-named-exports-order": "0.0.2",
     "prop-types": "^15.8.1",
